# The-2026-NeuroGolf-Championship--Research

./: .gitignore  README.md  pyproject.toml  requirements.txt
Description/: Dataset Description.docx  Overview.docx  the-2026-neurogolf-championship.ipynb
experiments/: experiments.jsonl  failures.md  hypotheses.md  journal.md  successes.md
experiments/reports/: dataset_summary.json
src/neurogolf/: __init__.py  baselines.py  cli.py  config.py  official.py  research_log.py  tasks.py  validation.py
tests/: test_tasks.py
